--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
                          "@emotion/styled":  "^11.14.0",
                          "@mui/icons-material":  "^6.4.7",
                          "@mui/material":  "^6.4.7",
-                         "@react-router/node":  "^7.2.0",
-                         "@react-router/serve":  "^7.2.0",
+                         "@react-router/node":  "7.3.0",
+                         "@react-router/serve":  "7.3.0",
                          "@types/papaparse":  "^5.3.15",
                          "@types/pdfjs-dist":  "^2.10.377",
                          "@types/react-beautiful-dnd":  "^13.1.8",
@@ -29,10 +29,10 @@
                          "react-chartjs-2":  "^5.3.0",
                          "react-colorful":  "^5.6.1",
                          "react-dom":  "^18.2.0",
-                         "react-router":  "^7.2.0"
+                         "react-router":  "7.3.0"
                      },
     "devDependencies":  {
-                            "@react-router/dev":  "^7.2.0",
+                            "@react-router/dev":  "7.3.0",
                             "@tailwindcss/vite":  "^4.0.0",
                             "@types/node":  "^20",
                             "@types/react":  "^18.2.0",
