--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private":  true,
     "type":  "module",
     "scripts":  {
-                    "build":  "react-router build --outDir dist",
+                    "build": "vite build",
                     "predev":  "node scripts/kill-ports.js",
                     "dev":  "react-router dev",
                     "start":  "react-router-serve ./dist/server/index.js",
@@ -29,7 +29,8 @@
                          "react-chartjs-2":  "^5.3.0",
                          "react-colorful":  "^5.6.1",
                          "react-dom":  "^18.2.0",
-                         "react-router":  "7.3.0"
+                         "react-router":  "7.3.0",
+                         "react-router-dom": "7.3.0"
                      },
     "devDependencies":  {
                             "@react-router/dev":  "7.3.0",
@@ -37,6 +38,7 @@
                             "@types/node":  "^20",
                             "@types/react":  "^18.2.0",
                             "@types/react-dom":  "^18.2.0",
+                            "@vitejs/plugin-react": "^4.2.1",
                             "react-router-devtools":  "^1.1.0",
                             "tailwindcss":  "^4.0.0",
                             "typescript":  "^5.7.2",
