--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "npm install --force --legacy-peer-deps && npm run build",
+  "buildCommand": "npm ci --ignore-scripts && npm run build",
+  "installCommand": "npm install --no-package-lock --no-audit --no-fund --force --legacy-peer-deps",
   "outputDirectory": "dist",
   "framework": "vite",
   "github": {
