Completely simplify build process by removing React Router dependencies

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm ci --ignore-scripts && npm run build",
+  "buildCommand": "npm run build",
   "installCommand": "npm install --no-package-lock --no-audit --no-fund --force --legacy-peer-deps",
   "outputDirectory": "dist",
   "framework": "vite",
