--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/pdfjs-dist": "^2.10.377",
         "@types/react-beautiful-dnd": "^13.1.8",
         "chart.js": "^4.4.8",
+        "firebase": "^11.4.0",
         "papaparse": "^5.5.2",
         "pdfjs-dist": "^4.10.38",
         "react": "^18.2.0",
