--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/papaparse": "^5.3.15",
         "@types/pdfjs-dist": "^2.10.377",
         "@types/react-beautiful-dnd": "^13.1.8",
+        "@types/uuid": "^10.0.0",
         "chart.js": "^4.4.8",
         "firebase": "^11.4.0",
         "papaparse": "^5.5.2",
@@ -25,7 +26,8 @@
         "react-chartjs-2": "^5.3.0",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.22.3"
+        "react-router-dom": "^6.22.3",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "@types/node": "^20",
