--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@firebase/firestore": "^4.7.9",
         "@mui/icons-material": "^6.4.7",
         "@mui/material": "^6.4.7",
         "@types/papaparse": "^5.3.15",
@@ -18,7 +19,7 @@
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/uuid": "^10.0.0",
         "chart.js": "^4.4.8",
-        "firebase": "^11.4.0",
+        "firebase": "^10.7.1",
         "papaparse": "^5.5.2",
         "pdfjs-dist": "^4.10.38",
         "react": "^18.2.0",
