Lots of changes around styling and drag n drop

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@firebase/firestore": "^4.7.9",
+        "@hello-pangea/dnd": "^18.0.1",
         "@mui/icons-material": "^6.4.7",
         "@mui/material": "^6.4.7",
         "@types/papaparse": "^5.3.15",
