--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
         "@types/node": "^20",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
+        "@typescript-eslint/eslint-plugin": "^8.30.1",
+        "@typescript-eslint/parser": "^8.30.1",
         "@vitejs/plugin-react": "^4.2.1",
+        "eslint": "^9.24.0",
+        "eslint-plugin-react": "^7.37.5",
         "tailwindcss": "^4.0.0",
-        "typescript": "^5.7.2",
+        "typescript": "^5.8.3",
         "vite": "^5.4.11",
         "vite-tsconfig-paths": "^5.1.4"
     }
